--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,13 @@
 }
 body {
     margin:0;
-    padding:10px;
+    padding:0;
     background-color: black;
+}
+#bar {
+    width: 100vw;
+    background-color: white;
+    color:black;
 }
 input {
     background-color:transparent;
