--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,11 @@
     user-select: none;
     font-size: 20px;
     color:white;
-}
-body {
+    overflow-x:hidden;
     margin:0;
     padding:0;
+}
+body {
     background-color: black;
 }
 #bar {
@@ -25,4 +26,7 @@ input {
 }
 input:focus{
     outline: none;
+}
+#output {
+    white-space: pre;
 }
